fix: rebranding logo spacing

--- a/portal/static/portal/sass/modules/_homepage_constants.scss
+++ b/portal/static/portal/sass/modules/_homepage_constants.scss
@@ -1,6 +1,3 @@
 $menu-height: 100px;
-$menu-height-sm: 90px;
-$menu-height-xs: 80px;
-$cfl-logo-height: 90px;
-$cfl-logo-height-md: 78px;
-$cfl-logo-height-sm: 60px;
+$menu-height-sm: 80px;
+$menu-height-xs: 70px;
